--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,19 @@
 // Navigation code here
+.navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 10px;
+  background-color: @wild-sand;
+  color: @ebony-clay;
+  h1 {
+    margin: 15px 0;
+    font-size: 4rem;
+  }
+  a {
+    font-size: 1.4rem;
+    margin: 0 20px;
+    text-decoration: none;
+    color: @river-bend;
+  }
+}
