--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,12 +7,12 @@
   background-color: @wild-sand;
   color: @ebony-clay;
   h1 {
-    margin: 15px 0;
+    .tb-space(20px, 10px);
     font-size: 4rem;
   }
   a {
-    font-size: 1.4rem;
-    margin: 0 20px;
+    font-size: 1.6rem;
+    margin: 0 15px;
     text-decoration: none;
     color: @river-bend;
   }
