--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,6 +59,12 @@
       }
 
       .btn {
+        button {
+          .button(@btn-bg-color, white, 80px, 30px);
+          cursor: pointer;
+          border-radius: 5px;
+          font-size: 1.4rem;
+        }
       }
     }
 
