--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,15 @@
 // Mixins Here
+
+// Top and bottom margin
+.tb-space(@top:0, @bottom:0) {
+  margin-top: @top;
+  margin-bottom: @bottom;
+}
+
+//bg color, font color, width, height
+.button(@bg-color:white, @font-color: black, @width:auto, @height:auto ) {
+  background-color: @bg-color;
+  color: @font-color;
+  width: @width;
+  height: @height;
+}
