--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+.hide {
+  display: none;
+}
+.full-center {
+  justify-content: center;
+  width: 100%;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -179,6 +186,11 @@ p {
   text-decoration: none;
   color: #454a59;
 }
+@media ( max-width: 500px ) {
+  .navigation a {
+    font-size: 1.4rem;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -191,6 +203,7 @@ footer {
 }
 .home .intro img {
   width: 100%;
+  border-radius: 5px;
 }
 .home .intro h2 {
   padding: 15px;
@@ -209,6 +222,22 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media ( max-width: 500px ) {
+  .home .space-images img.blast {
+    justify-content: center;
+    width: 100%;
+  }
+}
+@media ( max-width: 500px ) {
+  .home .space-images img.sky {
+    display: none;
+  }
+}
+@media ( max-width: 500px ) {
+  .home .space-images img.launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -225,6 +254,13 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media ( max-width: 500px ) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 15px;
+    margin-top: 20px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
@@ -237,18 +273,47 @@ footer {
 .home .walk .walk-text .btn button {
   background-color: #22283a;
   color: white;
-  width: 80px;
+  width: 85px;
   height: 30px;
   cursor: pointer;
   border-radius: 5px;
   font-size: 1.4rem;
 }
+.home .walk .walk-text .btn button:hover {
+  background-color: #5e6164;
+  color: white;
+  transform: scale(1.1);
+}
+@media ( max-width: 500px ) {
+  .home .walk .walk-text .btn button {
+    width: 100%;
+    height: 70px;
+    font-size: 1.8rem;
+  }
+}
+@media ( max-width: 500px ) {
+  .home .walk .walk-text {
+    justify-content: center;
+    width: 100%;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media ( max-width: 500px ) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media ( max-width: 500px ) {
+  .home .walk .walk-img img {
+    margin-bottom: 15px;
+  }
 }
