--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,7 @@
   .intro {
     img {
       width: 100%;
+      border-radius: 5px;
     }
 
     h2 {
@@ -26,6 +27,23 @@
       border-radius: 20px;
       height: 100%;
     }
+
+    img.blast {
+      @media @phone {
+        .full-center;
+      }
+    }
+
+    img.sky {
+      @media @phone {
+        .hide;
+      }
+    }
+    img.launch {
+      @media @phone {
+        .hide;
+      }
+    }
   }
 
   .visit-planets {
@@ -46,6 +64,11 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      flex-direction: column-reverse;
+      padding: 15px;
+      margin-top: 20px;
+    }
 
     .walk-text {
       width: 50%;
@@ -60,22 +83,38 @@
 
       .btn {
         button {
-          .button(@btn-bg-color, white, 80px, 30px);
+          .button(@btn-bg-color, white, 85px, 30px);
           cursor: pointer;
           border-radius: 5px;
           font-size: 1.4rem;
+          @media @phone {
+            width: 100%;
+            height: 70px;
+            font-size: 1.8rem;
+          }
         }
+      }
+      @media @phone {
+        width: 100%;
+        .full-center;
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+        margin: 0;
+      }
 
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        @media @phone {
+          margin-bottom: 15px;
+        }
       }
     }
   }
