--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,4 +12,18 @@
   color: @font-color;
   width: @width;
   height: @height;
+  &:hover {
+    background-color: @shuttle-gray;
+    color: white;
+    transform: scale(1.1);
+    // border: 2px solid lightblue;
+  }
+}
+
+.hide {
+  display: none;
+}
+.full-center {
+  justify-content: center;
+  width: 100%;
 }
