--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,5 +15,8 @@
     margin: 0 15px;
     text-decoration: none;
     color: @river-bend;
+    @media @phone {
+      font-size: 1.4rem;
+    }
   }
 }
