--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,11 @@
 // Home Content
 
 .home {
+  margin-top: 12%;
+  @media @phone {
+    margin-top: 25%;
+  }
+
   .intro {
     img {
       width: 100%;
