--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,9 +4,13 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 10px;
-  background-color: @wild-sand;
-  color: @ebony-clay;
+  background-color: fade(@wild-sand, 90%);
+  position: fixed;
+  top: 0;
+  width: 100%;
+
   h1 {
+    color: @ebony-clay;
     .tb-space(20px, 10px);
     font-size: 4rem;
   }
