stretch: redid nav to original

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,10 @@
 // Home Content
 
 .home {
-  margin-top: 12%;
-  @media @phone {
-    margin-top: 25%;
-  }
+  // //margin-top: 12%;
+  // @media @phone {
+  //   margin-top: 25%;
+  // }
 
   .intro {
     img {
