--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,9 +5,9 @@
   align-items: center;
   padding-bottom: 10px;
   background-color: fade(@wild-sand, 90%);
-  position: fixed;
   top: 0;
   width: 100%;
+  //position: fixed;
 
   h1 {
     color: @ebony-clay;
@@ -19,6 +19,7 @@
     margin: 0 15px;
     text-decoration: none;
     color: @river-bend;
+
     @media @phone {
       font-size: 1.4rem;
     }
